# secret-service

./: .gitignore  Cargo.toml  LICENSE  flake.nix
nix/: module.nix
src/: args.rs  db.rs  main.rs  utils.rs
src/mode/: client.rs  mod.rs  server.rs
src/transport/: mod.rs  ssh.rs
